# slides

./: .gitignore  pres.tex
2023-06-ghc-workshop/examples/Fun/: Fun.hs
2023-06-ghc-workshop/examples/Svg/: Main.hs  browse.sh  build.sh  helpers.c
2023-08-ghc-optim/: .gitignore  pres.tex
examples/Constructors/: Constructors.hs
examples/Diagrams/: Diag.cabal  Main.hs  browse.sh  helpers.c  helpers.js  run.sh
examples/FFI/: FFI.hs
examples/Fun/: Fun.hs
examples/Prim/: Prim.hs
examples/SumInt64/: SumInt64.hs
examples/Svg/: Diag.cabal  Main.hs  helpers.js
